# TVTimeCompare

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: build_desktop.py
src/tvtimecompare/: __init__.py  __main__.py  cli.py
src/tvtimecompare/compare/: __init__.py  engine.py
src/tvtimecompare/gui/: __init__.py  __main__.py  app.py
src/tvtimecompare/models/: __init__.py  show.py
src/tvtimecompare/readers/: __init__.py  diagnostics.py  refract.py  tvtime.py
src/tvtimecompare/reports/: __init__.py  generator.py
src/tvtimecompare/reports/templates/: report.html.j2
src/tvtimecompare/services/: __init__.py  comparison.py
src/tvtimecompare/utils/: __init__.py  titles.py
tests/: test_cli.py  test_comparison_engine.py  test_desktop_packaging.py  test_gui.py  test_models.py  test_readers.py  test_reports.py  test_sample_exports.py  test_services.py
tests/fixtures/: refract_episodes.csv  tvtime_seen_episode.csv  tvtime_tracking-prod-records-v2.csv
