[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tvtimecompare"
version = "0.1.0"
description = "Compare TV Time GDPR exports with Refract exports after migration."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "TVTimeCompare contributors" },
]
keywords = ["tvtime", "refract", "gdpr", "migration", "tv"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "jinja2>=3.1.4",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "rapidfuzz>=3.10.1",
  "rich>=13.9.4",
  "typer>=0.15.1",
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "pytest>=8.3.4",
  "ruff>=0.8.4",
]
gui = [
  "pyside6>=6.8.0",
]

[project.scripts]
tvtimecompare = "tvtimecompare.cli:app"
tvtimecompare-gui = "tvtimecompare.gui:run_gui"

[project.urls]
Homepage = "https://github.com/example/TVTimeCompare"
Repository = "https://github.com/example/TVTimeCompare"
Issues = "https://github.com/example/TVTimeCompare/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tvtimecompare"]

[tool.hatch.build.targets.wheel.force-include]
"src/tvtimecompare/reports/templates/report.html.j2" = "tvtimecompare/reports/templates/report.html.j2"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
target-version = ["py312"]
line-length = 88
